<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="match_parent"
   	android:layout_height="wrap_content"
   	android:orientation="vertical" >

    <ImageView
        android:id="@+id/listImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/ic_launcher"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        />

    <TextView
        android:id="@+id/listName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/productName"
        android:layout_toLeftOf="@id/listImage"
        android:textStyle="bold"
        android:textSize="18sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/listPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listName"
        android:layout_alignParentLeft="true"
        android:text="@string/productPrice"
        android:layout_centerVertical="true" />
    
</RelativeLayout>
