<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/presents" >

    <TextView
        android:id="@+id/widgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/widgetTitle"
        android:textSize="@dimen/sett_height"
        android:layout_marginTop="10dp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/widgetImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgetTitle"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/product_description"
        android:src="@drawable/test_100001_normal_6"
        android:paddingTop="10dp"
	    android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/widgetProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/widgetTitle"
        android:layout_alignRight="@+id/widgetTitle"
        android:layout_below="@+id/widgetImage"
        android:gravity="fill_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:contentDescription="@string/contentDescription"
        android:id="@+id/gift1Image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/widgetTitle"
        android:layout_toLeftOf="@+id/widgetTitle"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:contentDescription="@string/contentDescription"
        android:id="@+id/gift2Image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/widgetTitle"
        android:layout_toRightOf="@+id/widgetTitle"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>
