<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Call this layout list_gift.xml -->
    
    <!-- Product image -->

    <ImageView
        android:id="@+id/giftImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/test_content_desc"
        android:paddingRight="@dimen/image_padding"
        android:src="@drawable/test_100001_normal_3" />

    <!-- Product name -->

    <TextView
        android:id="@+id/giftNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/giftImg"
        android:layout_toRightOf="@+id/giftImg"
        android:text="@string/test_product_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingBottom="15dp" />

    <!-- Rating bar -->

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/giftNameValue"
        android:layout_toRightOf="@+id/giftImg"
        android:numStars="5"
        android:paddingBottom="15dp" />

    <!-- Narrow horizontal line -->

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:layout_below="@id/ratingBar"
        android:layout_toRightOf="@+id/giftImg"
        android:background="@color/red_dark" />

    <!-- Product price -->

    <TextView
        android:id="@+id/giftPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_toRightOf="@+id/giftImg"
        android:paddingRight="@dimen/details_padding"
        android:paddingTop="15dp"
        android:text="@string/product_price_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey_dark" />

    <TextView
        android:id="@+id/giftPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_toRightOf="@+id/giftPrice"
        android:paddingTop="15dp"
        android:text="@string/test_price_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Wide horizontal line -->

    <View
        android:id="@+id/fullLine1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/giftImg"
        android:background="@color/red_dark" />

</RelativeLayout>